--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div id="quiz" style="display: none;"></div>
     <div id="result" style="display: none;"></div>
   </div>
-
+<footer>Contact: <a href="mailto:royalmanagement02@gmail.com" style="color:#58a6ff;">royalmanagement02@gmail.com</a></footer>
   <script>
     const firebaseConfig = {
       apiKey: "AIzaSyDg6hedgJB7nK3xVvIrxg04ouFVTkIHe2k",
